# Muser

./: ._CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  CtrlFreekV2.py  README.md  email  update.txt
lib/GLFW/Mac/include/GLFW/: ._glfw3.h
lib/GLFW/Win32/docs/html/: ._window_8dox.html
lib/GLFW/Win64/docs/html/search/: ._all_0.html
lib/GLFW/glfw-3.3.bin.MACOS/lib-macos/: ._libglfw.3.dylib
old/: ObjParser.cpp
res/: spectrogram.psd
res/data/: ObjGl.java  fragment.shader
res/data/Default_muse/: _obj_converter.py  normal.mus  texel.mus  vertex.mus
res/data/Shaders/: fragment.shader  vertex.shader
res/temp/: object.cpp
src/: Application.cpp  Main.cpp  Muser.cpp  RenderMuser.cpp  main.cpp  muse.cpp  muser.cpp  renderGeometryToWav.cpp
src/header/: Application.h  AudioHandler.hpp  Main.hpp  Mantis.hpp  Muse.h  Muse.hpp  MuseHandler.hpp  Muser.hpp  ObjGl.hpp  ObjParser.h  Object3dModel.h  Object3dModel.hpp  Object3dModel_new.hpp  ObjectData.hpp  ObjectHandler.hpp  RenderMuser.h  Shader.hpp  ZMesh.hpp  bi_tools.h  bi_tools.hpp  glad.h
